Update documentation for Roblox & SKlauncher mode: enhance overview, clarify features, and improve usage instructions